<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_searchable">Apps in Insular</string>
    <string name="label_activity_island_settings">Insular Settings</string>

    <string name="tab_mainland">Mainland</string>
    <string name="tab_island">Insular</string>
    <string name="tab_discovery">Discovery</string>
    <string name="default_island_name">Insular %d</string>
    <string name="default_island0_name">Insular</string>
    <string name="default_island1_name">Neverland</string>
    <string name="default_island2_name">Atlantis</string>
    <string name="default_island3_name">Penglai</string>

...
    <string name="setup_island_intro">\"Insular\" is a sandbox environment to clone selected apps and isolate them from accessing your personal data
outside (including call logs, contacts and etc) even if permissions are granted.
\n\nCloned app runs parallel aside from the installed one with its separate copy of app data. It can also be frozen on demand, with launcher icon
vanished and its background behaviors completely blocked.
\n\nBy creating the sandbox environment, you authorize Insular to act as device administrator of \"Android for Work\", with the privilege to manage
the sandbox environment. Insular never collect data related to your privacy, please read our privacy policy on Google Play Store for more details.</string>
    <string name="setup_accept">Accept</string>
    <string name="setup_error_managed_profile_not_supported">Sorry, the required feature \"Managed Profile\" is not supported on this device.</string>
    <string name="setup_error_provisioning_incomplete">Insular setup is incomplete, the previous attempt might be unsuccessful.\n\nIf your device ROM or 3rd-party tool enforce auto-start control (or similar background-restriction functionality), please whitelist Insular in related settings, then continue the setup.</string>
    <string name="setup_error_managed_device">Sorry, Insular cannot be setup due to device currently being managed by <b>%1$s</b>.</string>
    <string name="setup_error_missing_managed_provisioning">Sorry, the required \"Android for Work\" feature may not be fully supported on your device.</string>
    <string name="setup_solution_for_cancelled_provision">Trouble setting-up Insular?\n\nIf you got error message during the setup procedure of Insular, please continue to open the online troubleshooting guide with suggested solutions.\n\nIf all the solutions do not work and your device is rooted, you can alternatively setup Insular with root.</string>

...
    <string name="button_instructions_online">Instructions (online)</string>
    <string name="button_account_settings">Account Settings</string>
    <string name="button_have_checked">I\'ve checked</string>
    <string name="button_setup_troubleshooting">Troubleshooting (web)</string>
    <string name="button_setup_island_with_root">Setup Insular with root</string>

    <string name="action_clone">Clone</string>
    <string name="action_clone_back">Clone to mainland</string>
    <string name="action_freeze">Freeze</string>
    <string name="action_unfreeze">Unfreeze</string>
    <string name="action_shortcut">Create Unfreeze &amp; Launch shortcut</string>
    <string name="action_greenify">Auto-freeze with Greenify</string>
    <string name="action_app_settings">App settings</string>
...
    <string name="action_activate">Activate</string>
    <string name="action_deactivate">Deactivate</string>

    <string name="menu_tip">Tip…</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_settings">Settings</string>

    <string name="filter_include_hidden_system_components">+ Hidden System Components</string>

    <string name="dialog_title_warning">WARNING</string>
    <string name="dialog_manual_setup"><b>For advanced user</b>:\nThis limitation could also be circumvented with one-time manual setup via USB-connected PC.</string>
    <string name="dialog_clone_via_install_explanation">Insular will now launch the Android installer to \"install\" this app in Insular.\n\nAlthough it looks like the regular installation confirmation, actually it takes no extra storage space.</string>
...
