...
                android:layout_gravity="top"
                bind:tabMode="fixed" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/app_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingBottom="88dp"
            android:paddingStart="-16dp" tools:comment="To workaround the weired tilt side shadow on elevated item"
            android:paddingEnd="-16dp"
...
            app:behavior_peekHeight="80dp"
            bind:behavior_state="@{apps.mSelection != null ? BottomSheetBehavior.STATE_COLLAPSED : BottomSheetBehavior.STATE_HIDDEN}"
            bind:behavior_bottomSheetCallback="@{apps.bottom_sheet_callback}"
            android:onClick="@{apps::onBottomSheetClick}">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?android:attr/colorPrimaryDark"
                android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
                android:popupTheme="@style/AppThemeOverlay.Dark.Popup"
                android:title="@{apps.mSelection.info.label}" tools:title="Insular"
...
